Minor updates to CSS to fix some alignment issues

--- a/service/surf/apps/materials/static/materials/widget.css
+++ b/service/surf/apps/materials/static/materials/widget.css
@@ -17,6 +17,7 @@
 }
 
 .v-card__title {
+    align-content: flex-start;
     color: #008741;
     font-weight: 700;
 }
@@ -145,7 +146,7 @@
  }
 
 .truncate2 {
-    height: 64px;
+    height: 50px;
     line-height: 24px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
